# fdk_aac_sample

./: CMakeLists.txt  README.md  build.sh
cmake/: util.cmake
cmake/module/: FindFDK_AAC.cmake  FindOBJECT.cmake  FindX264.cmake
include/: audio_dec.h  audio_decode.h  audio_enc.h
src/: audio_dec.c  audio_decode.c  audio_enc.c  main.c
